update all media queries

--- a/index.html
+++ b/index.html
@@ -5,106 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Guide - Japan</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
   <body>
     <header>
+      <!-- Slogan + Title -->
       <div>
         <span> Tokyo - the city of future </span>
         <h1>Travel Guide</h1>
       </div>
+      <!-- Présentation -->
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-        molestiae obcaecati modi ipsa. Natus magnam eaque vitae, dolorum debitis
-        dignissimos est quidem eos quia reiciendis, unde dolores veritatis
-        labore excepturi, animi enim ipsam cumque. Soluta!
+        Capitale animée du Japon, Tokyo associe les styles ultramodernes et
+        traditionnels, dans un mélange de gratte-ciel aux néons lumineux et de
+        temples anciens. Le somptueux Meiji-jingū est un sanctuaire shinto
+        réputé pour son entrée imposante et les bois qui l'environnent. Le
+        palais impérial est entouré de vastes jardins publics. Les nombreux
+        musées de la ville proposent des expositions allant de l'art classique,
+        au musée national de Tokyo, à un théâtre kabuki reconstruit, au musée
+        d'Edo-Tokyo
       </p>
     </header>
     <main>
-      <section>
+      <!-- Activity -->
+      <section class="activity">
+        <!-- Activity 1 Tourisme -->
         <div class="card">
           <img src="./assets/images/kyoto-ge17aad24e_1920.jpg" alt="" />
           <div>
             <h2>Location and how to get there</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
-              delectus?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
-              sit corporis. Aliquam sunt vero alias? Consectetur cupiditate amet
-              tempora veniam impedit inventore, animi facilis quia ea excepturi
-              recusandae! Accusantium et consequatur blanditiis numquam a. Quae,
-              doloremque accusantium. Fugiat sint quos, beatae illum vel quasi
-              officia architecto voluptate optio, quis in!
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut odio
-              quas ut, nulla exercitationem, voluptatibus quod quaerat quis
-              aliquid, necessitatibus omnis? Repellendus officia consectetur
-              deserunt.
+              Il y a toujours quelque chose à découvrir à Tokyo où les
+              événements saisonniers et les grandes ouvertures se succèdent sans
+              interruption. Ne cherchez pas plus loin pour obtenir les dernières
+              informations sur Tokyo.
             </p>
             <button class="btn btn--info">read Mores</button>
           </div>
         </div>
-
+        <!-- Activity 2 Temples -->
         <div class="card">
           <img src="./assets/images/sun-rays-gdd08a9e01_1920.jpg" alt="" />
           <div>
-            <h2>Introducing Tokyo</h2>
+            <h2>Sites Historiques</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
-              itaque dolorum, similique sunt dolor modi aliquid sapiente
-              reprehenderit accusantium. Consectetur earum, totam id molestiae
-              doloribus nulla ut inventore corrupti accusantium labore
-              praesentium odit eveniet, nihil harum explicabo nesciunt maxime
-              dolorum atque illo vel a assumenda! Sint repellat beatae et
-              voluptates.
+              Riche en monuments historiques, Tokyo ne manque pas de châteaux,
+              de temples, de salons de thé ou de vieilles maisons qui vous
+              feront remonter dans le temps.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet,
-              numquam nulla! Ratione recusandae maxime sequi odio quae
-              voluptates! Reiciendis sed, similique ut doloremque mollitia neque
-              ea ratione necessitatibus? Totam magni magnam aspernatur, ut
-              impedit quam!
+              Des guerriers aux écrivains en passant par les gens du peuple, les
+              échos de l’existence des anciens habitants d’Edo continuent à
+              résonner à travers tout Tokyo. Avec autant de lieux à visiter,
+              pensez à vous réserver une promenade spéciale qui mettra l’accent
+              sur l’aspect historique qui vous intéresse le plus.
             </p>
             <button class="btn btn--info">read Mores</button>
           </div>
         </div>
+        <!-- Activity 1 Cuisines -->
         <div class="card">
-          <img src="./assets/images/japan-g7ae4ce87d_1920.jpg" alt="" />
+          <img src="./assets/images/85_0157_1_750x1100.jpg" alt="" />
 
           <div>
-            <h2>What to do in Tokyo</h2>
-            <h3>Talin Chan Floating Market</h3>
+            <h2>Boire & Manger</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime,
-              fugit ipsam voluptas id, cum sunt ipsum deserunt natus quibusdam
-              quidem vero! Culpa pariatur id similique quaerat nostrum. Nemo,
-              consectetur! Incidunt quidem sed rerum cupiditate aperiam eius
-              minus, molestias laborum excepturi dolor laboriosam autem
-              consequuntur aut, fuga ratione iure corrupti quia!
+              Découvrez où aller et quoi manger à Tokyo, une des plus grandes
+              capitales gastronomiques du monde
             </p>
-            <h3>The Grand Palace</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-              ad accusantium dolores sit, quasi saepe, modi voluptatem earum,
-              illo qui consequatur dolor quis. Tempore cupiditate fugiat vitae
-              perferendis sit, delectus suscipit inventore? Doloribus
-              consequuntur ut molestias modi aut iusto aspernatur, natus
-              temporibus blanditiis, ducimus a cumque, minima deserunt nostrum
-              dolores!
+              Manger et boire est une forme d’art au Japon et nul autre endroit
+              que les bars et les restaurants de Tokyo n’offre une telle variété
+              d’expériences culinaires aussi excitantes. Que vous souhaitiez un
+              restaurant primé, un restaurant local authentique, un dîner
+              spectacle éblouissant ou un cocktail préparé minutieusement au
+              dernier étage d’un gratte-ciel, la ville a tout pour vous
+              satisfaire.
             </p>
             <button class="btn btn--info">read Mores</button>
           </div>
         </div>
       </section>
+      <!-- Gallery -->
       <section>
-        <h2>Tokyo - Krung thep Maha Nakhon</h2>
+        <h2>Tokyo - Gallery Photos</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi soluta
-          obcaecati, nam voluptatum ratione vitae numquam, autem magnam
-          laboriosam iusto, accusamus tenetur possimus in aspernatur?
+          Découvrez quelques photos qui vous donnerons vraiment envie de
+          découvrir cette ville. C'est top et franchement je pense que vous
+          pourrez aimez vivre là bas!!
         </p>
         <div class="gallery">
           <figure>
@@ -134,31 +123,38 @@
 
           <figure>
             <img src="./assets/images/woman-g75f32e811_1920.jpg" alt="" />
-            <figcaption>Articles And trip reports</figcaption>
+            <figcaption>Avenue</figcaption>
           </figure>
 
           <figure>
-            <img src="./assets/images/ai-generated-gc5c290e96_1920.jpg" alt="" />
-            <figcaption>Articles And trip reports</figcaption>
+            <img
+              src="./assets/images/ai-generated-gc5c290e96_1920.jpg"
+              alt=""
+            />
+            <figcaption>Bonzaï</figcaption>
           </figure>
 
           <figure>
             <img src="./assets/images/bridge-g55b1f0a22_1920.jpg" alt="" />
-            <figcaption>Articles And trip reports</figcaption>
+            <figcaption>Paysage</figcaption>
           </figure>
 
           <figure>
-            <img src="./assets/images/cherry-blossom-gfd12da0be_1920.jpg" alt="" />
-            <figcaption>Articles And trip reports</figcaption>
+            <img
+              src="./assets/images/cherry-blossom-gfd12da0be_1920.jpg"
+              alt=""
+            />
+            <figcaption>Fleur de cerisier</figcaption>
           </figure>
 
           <figure>
-            <img src="./assets/images/woman-g75f32e811_1920.jpg" alt="" />
-            <figcaption>Articles And trip reports</figcaption>
+            <img src="./assets/images/pond-g6a77835c8_1920.jpg" alt="" />
+            <figcaption>Que c'est beau</figcaption>
           </figure>
         </div>
       </section>
     </main>
+
     <footer>
       <div class="emergency">
         <h3>emergency numbers</h3>
